# metal_3_example

./: .gitignore  CMakeLists.txt  LICENSE  README.md
shaders/: rebuild.sh  shaders.metal  shaders_spv.metal
src/: camera.cpp  camera.hpp  engine.cpp  engine.hpp  engine.mm  main.cpp  main.mm  mesh.cpp  mesh.hpp  metal_util.cpp  metal_util.hpp  metal_util.mm  util.cpp  util.hpp  util.mm
